# nbodies

./: README.md
src/: CMakeLists.txt  Config.h.in  exception.hpp  globals.cpp  globals.hpp  main.cpp  simulation.cpp  simulation.hpp  solver.cpp  solver.hpp  vec3.hpp  world.cpp  world.hpp
